Implemented news handlers
